# inact

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  agent_workspace.py  pyproject.toml
agent/: .env.example  Dockerfile  agent.py  docker-compose.yml  memory.py  pyproject.toml  server.py
docs/: README.md  boundaries.md  writing-an-app.md
docs/decisions/: id-strategy.md  log.md
example/: agent_chat.py  app.py  chatbot.py  csv_agent.py  notify_agent.py  reply_agent.py  todo_agent.py
example/docs/: README.md  config.toml  guide.md
inact/: __init__.py  a2a.py  core.py  cron.py  forms.py  handlers.py  mailbox.py  mcp.py  message.py  pages.py  register.py  render.py  search.py  settings.py  storage.py  todo.py  utils.py  website.py
inact/apps/: a2a.py  auth.py  cron.py  files.py  forms.py  git_proxy.py  issues.py  jobs.py  mailbox.py  mcp.py  message.py  notify.py  register.py  remote.py  s3.py  search.py  skills.py  tasks.py  todo.py  tools.py
inact/apps/workspace/: __init__.py  database.py  mailbox.py  message.py  register.py  todo.py
inact/templates/: admin_human.html  admin_login.html  base.html  db_human.html  files_human.html  issues_human.html  jobs_human.html  ls.html  mail_human.html  markdown.html  message_human.html  notify_human.html  plain.html  register_human.html  search_human.html  todo_human.html  toml.html  vscode_embed.html
legacy/: database.py  files.py  mailbox.py  search.py  sql.py  website.py
tests/: test_remote.py  test_skills.py  test_tasks.py  test_tools.py  test_workspace_admin.py
workspace/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  server.py  start.sh
workspace_data/: notify.db  workspace.db
