[project]
name = "inact"
version = "0.1.0"
description = "AI-first zero-JS frontend framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zijian Zhang", email = "doomspec@outlook.com" }]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
    "markdown>=3.5",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
mcp = ["mcp>=1.0"]
postgres = ["psycopg2-binary>=2.9"]

[project.urls]
Repository = "https://github.com/EvoEvolver/inact"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
