[project]
name = "inact"
version = "0.1.0"
description = "AI-first zero-JS frontend framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zijian Zhang", email = "doomspec@outlook.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.27",
    "jinja2>=3.1.6",
    "markdown>=3.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "pywebpush>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.49",
    "tomli-w>=1.0",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
mcp = ["mcp>=1.0"]
postgres = ["psycopg2-binary>=2.9"]
push = []

[project.urls]
Repository = "https://github.com/EvoEvolver/inact"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
]
