[project]
name = "inact-workspace"
version = "0.1.0"
description = "Inact Agent Workspace — self-hosted multi-agent collaboration server"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
    "markdown>=3.5",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
    "jinja2>=3.0",
    "aiosmtpd>=1.4",
    "sqlalchemy>=2.0",
    "gunicorn>=21.0",
    "dnspython>=2.4",
    "pywebpush>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
search   = ["tavily-python>=0.3"]
pdf      = ["pypdf>=4.0"]
